[tool.poetry]
name = "repl_python3_softwareengineeringproject"
version = "0.1.0"
description = ""
authors = ["JackLeonard4 <<>>"]

[tool.poetry.dependencies]
python = "^3.8"
pandas = "^1.3.4"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
